Fix overflow and max-height for screen

--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -45,6 +45,7 @@
     @extend %card-base;
     // height: 200px;
     width: 100%;
+    max-height: 300px;
 
     .mini-card-text{
         @extend %card-text;
