--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -34,6 +34,7 @@ main {
     display: grid; 
     grid-template-columns: 1fr;
     gap: 1rem;
+    min-height: 100vh;
 
     @media screen and (min-width: 800px) {
         gap: 2rem;
